fixcount (#231)